<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".details.TransactionDetailFragment">

  <ImageView
      android:id="@+id/transactionCategoryIcon"
      android:layout_width="120dp"
      android:layout_height="120dp"
      android:contentDescription="@string/content_description_business_transaction"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.256"
      app:srcCompat="@drawable/icon_category_business" />

  <TextView
      android:id="@+id/transactionDescriptionText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:padding="@dimen/dimen_16"
      android:textColor="@color/textColorGrey"
      android:textSize="@dimen/text_size_16"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/transactionCategoryIcon"
      tools:text="@string/sample_transaction_item_title_text" />

  <TextView
      android:id="@+id/transactionAmountText"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/colorOnPrimary"
      android:textSize="@dimen/text_size_48"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/transactionDescriptionText"
      tools:text="@string/sample_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>