<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/transactionCategoryIcon"
        android:layout_width="@dimen/dimen_40"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_16"
        android:alpha="0.5"
        android:background="@drawable/icon_background"
        android:contentDescription="@string/content_description_business_transaction"
        android:padding="@dimen/dimen_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon_category_business" />

    <TextView
        android:id="@+id/transactionDescriptionText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12"
        android:textColor="@color/textColorGrey"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/transactionAmountText"
        app:layout_constraintStart_toEndOf="@id/transactionCategoryIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_transaction_item_title_text" />

    <TextView
        android:id="@+id/transactionAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dimen_16"
        android:textColor="@color/colorOnPrimary"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/sample_amount" />

    <View
        android:layout_width="0dp"
        android:layout_height="1px"
        android:background="@color/textColorGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/transactionCategoryIcon" />
</androidx.constraintlayout.widget.ConstraintLayout>